--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git@github.com:tcoopman/image-webpack-loader.git"
   },
   "dependencies": {
-    "imagemin": "^3.0.0",
+    "imagemin": "~3.1.0",
     "imagemin-mozjpeg": "^4.0.0",
     "loader-utils": "^0.2.5"
   },
